2001-08-22  Michael Meeks  <michael@ximian.com>

	* bonobo/*: convert to GQuark more fully, use static
	initializers.

	* bonobo/bonobo-ui-node.c (cleanhash): prune if & clean
	prototype ( from Darin ).
	(bonobo_ui_node_get_attr): simplify to use dup
	without conditional.
	(bonobo_ui_node_get_content): ditto.
	(bonobo_ui_node_copy_attrs): ditto.

	* Merged to 2001-08-22 from bonobo: ui-shrink branch.

2001-08-22  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_set_status): update path - since tree
	no longer has empty child content nodes.

2001-08-21  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (state_update_new):
	efficiency wins.
	(hide_placeholder_if_empty_or_hidden): ditto.

	* bonobo/bonobo-ui-xml.c (do_insert): optimize.
	(merge): more efficiency tweaking.

	* bonobo/bonobo-ui-engine.c (move_dirt_cmd_to_widget): 
	accelerate loop, use name_id
	(update_commands_state): ditto.

	* bonobo/bonobo-ui-xml.c (bonobo_ui_xml_set_dirty, merge):
	quick compares for placeholder.
	(find_child, merge): accelerate name lookups.

	* tests/test-ui.c (main): update status check.

	* bonobo/bonobo-ui-node.c (uiEndElement): fix
	empty content pruning bug.
	(bonobo_ui_node_replace): swap arg. order; it was wrong.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_translate_ui): encode strings for
	libxml transport issues.

	* bonobo/bonobo-ui-node.c
	(bonobo_ui_node_move_children): impl.

	* bonobo/bonobo-ui-xml.c (override_node_with),
	(reinstate_old_node): use it.
	(move_children): kill it - slow.

	* bonobo/bonobo-ui-engine.c (class_init): setup
	cached ids for "id", "verb", "name"
	(node_get_id): fix horrible inefficiencies.
	(cmd_to_node_add_node): upd.
	(cmd_to_node_remove_node): upd.
	(impl_emit_verb_on): upd.
	(cmd_get_node): upd.
	(impl_emit_event_on): upd.
	(bonobo_ui_engine_get_cmd_node): upd.

	* bonobo/bonobo-ui-xml.c
	(bonobo_ui_xml_class_init): setup name_id.
	(do_set_id): use it.